# python-standard-rules

./: README.md  python_rules_check.sh
pystdrules/: pyproject.toml
pystdrules/src/pystdrules/: script.py
